[gd_scene load_steps=2 format=3 uid="uid://7d5tayh8lbfv"]

[ext_resource type="Script" path="res://scenes/EnemySpawner/enemy_spawner.gd" id="1_83wwx"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_83wwx")

[node name="SpawnTimer" type="Timer" parent="."]

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[connection signal="timeout" from="DifficultyTimer" to="." method="_on_difficulty_timer_timeout"]
